# Finagent

./: .env.example  README.md  pyproject.toml  requirements.txt  test_document.txt  test_valuation.py
data/report/: example.txt  xiaomi.txt
data/result/: xiaomi.md
finagent/: __init__.py  example.py  valuation_results.json
finagent/agents/: __init__.py  valuation_agent.py
finagent/data/report/: pingan.txt
finagent/data/result/: pingan.md
finagent/prompts/: price_eval
finagent/script/: __init__.py  example.py
finagent/templates/: __init__.py  prompt.py
finagent/utils/: __init__.py  document_processor.py
